fix: align text

--- a/client/src/sass/withdraw.scss
+++ b/client/src/sass/withdraw.scss
@@ -21,6 +21,14 @@
     font-size: 18px!important;
 }
 
+.available-withdraw{
+    position: relative;
+    background-color: $primary-color;
+    padding: 0.5rem 1rem;
+    color: white;
+    border-radius: 13px;
+}
+
 @media (min-width: 576px) { 
   
 }
@@ -32,7 +40,9 @@
 }
 
 @media (min-width: 992px) {
-
+        .available-withdraw{
+            width: 20%;
+        }
 }
 
 @media (min-width: 1200px) {
